--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
-<app-map></app-map>
+<mat-toolbar>
+  <button mat-icon-button color="primary">
+    <mat-icon aria-label="Example icon-button with a heart icon">home</mat-icon>
+  </button>
+  Agv localization
+</mat-toolbar>
+<mat-sidenav-container>
+  <mat-sidenav mode="side">Sidenav content</mat-sidenav>
+  <mat-sidenav-content> <app-map></app-map> </mat-sidenav-content>
+</mat-sidenav-container>
