estetic improvements for map and toolbar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,4 @@
   </button>
   Agv localization
 </mat-toolbar>
-<mat-sidenav-container>
-  <mat-sidenav mode="side">Sidenav content</mat-sidenav>
-  <mat-sidenav-content> <app-map></app-map> </mat-sidenav-content>
-</mat-sidenav-container>
+<app-map></app-map>
