--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -1,6 +1,7 @@
 .map-search {
-  background:#fff;
-  padding: 5px 20px 5px 20px;
+  background: #fff;
+  padding-left: 5px;
+  padding-right: 5px;
 
   ul {
     li {
