rename map component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<mat-toolbar>
-  <button mat-icon-button color="primary">
+<mat-toolbar color="primary">
+  <button mat-icon-button color="accent">
     <mat-icon aria-label="Example icon-button with a heart icon">home</mat-icon>
   </button>
   Agv localization
 </mat-toolbar>
-<app-map></app-map>
+<agv-map></agv-map>
 <agv-search></agv-search>
